@@ -43,6 +43,8 @@ Version 1.3-svn:
  * WML engine
    * added prerecruit event that takes place after the unit is created but before it is displayed.
    * added ability to define color ranges and palettes in scenario, units, and unit modification effects.  Added ability to add image modifications in a unit modification [effect] tag
+   * SUF can now filter on anything that is also available throught unit
+   variables
    * overhaul of team coloring engine.  Now possible to apply multiple TC to an image.
    * added fourth color in team_rgb definitions for representative color in minimap
    * added a 'hide_help' key that prevents a unit type from being listed in the
